# Baseline2015

./: .gitignore  Dockerfile
FusionBaselineSystem/: README.md  late_naming.py
SubComponent/1_Shot/: 1_extract_descriptor.py  2_segmentation.py  3_select_shot_segmentation.py  README.md
SubComponent/2_SpeechTurn/: 1_learn_model_speech_nonspeech.py  2_speech_nonspeech_segmentation.py  3_speech_turn_segmentation.py  4_linear_bic_clustering.py  5_compute_BIC_matrix.py  6_learn_normalisation_model.py  6_learn_perceptron_model_for_svs.py  7_compute_svs_matrix_perceptron_model.py  7_normalisation_matrix.py  README.md
SubComponent/3_Face/: 1_face_detection.py  2_face_tracking.py  3_extract_flandmark.py  3_face_landmarks_detection_macos  4_face_HoG_descriptor.py  5_compute_hvh_matrix.py  5_select_central_desc_hog_LDML.py  7_compute_hvh_matrix.py  README.md
SubComponent/Evaluation/: README.md  distribution_proba_matrix_faceTrack.py  distribution_proba_matrix_speechTurn.py  distribution_proba_speaking_face.py  eval_speech_turn_segmentation.py  face_detection.py  face_detection_after_tracking.py  face_diarization.py  face_l2_mat.py  face_tracking.py  proba_mat_speechTurn.py  proba_speaking_face.py  speaking_face_detection.py  spk_diarization.py
SubComponent/Face/: 10_normalisation_matrix.py  11_diarization.py  1_face_detection.py  2_face_tracking.py  3_extract_desc_face_selection.py  4_face_HoG_descriptor.py  4_facetrack_descriptor.py  5_l2_matrix.py  README.md  (+8 more)
SubComponent/Face/3_extract_flandmark/: CMakeLists.txt
mediaeval_util/: extract_idx.py  imageTools.py  repere.py
(+65 files in other folders)
